test/resources/typer/failing/IfError3.grading.amy
object IfError
  val x: Int(32) = if (false) then "" else "" end if;
  x
end IfError
